# minecraft_crafting_calculator

./: Cargo.toml  db.sqlite  package-lock.json  package.json
front-end/: index.html  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.app.json  vite.config.ts
front-end/src/: App.css  App.tsx  MachineList.tsx  index.css
front-end/src/components/ui/: fullscreenTabs.tsx
server/: Cargo.toml
server/src/: main.rs  server.rs
src/: data.rs
