[package]
name = "omnifactory_crafting_calc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# make different targets for cli with main.rs and web server with server.rs
[[bin]]
name = "omnifactory_crafting_calc"
path = "src/main.rs"

[[bin]]
name = "omnifactory_crafting_calc_server"
path = "src/server.rs"

[dependencies]
rusqlite = { version = "0.32.0", features = ["bundled"] }
actix-web = "4.9.0"
lazy_static = "1.5.0"
serde = { version = "1.0.208", features = ["derive"] }